# tree-of-life-visualization

./: .gitignore  pyproject.toml  readme.md
docs/: 0003.md  project-prd-v0001.md  project-prd-v0003.md  updated-prd.md
src/tree_of_life/: main.py
src/tree_of_life/clustering/: embeddings.py  enhanced_processor.py  processor.py
src/tree_of_life/data/: downloader.py
src/tree_of_life/gan_navigator/: latent_explorer.py
src/tree_of_life/visualization/: grid_renderer.py  integrated_renderer.py  renderer.py
